--- a/index.html
+++ b/index.html
@@ -16,10 +16,12 @@
       Image.addEventListener("click", () => { 
         if (clicks < 99) {
             if (Image.src.indexOf("sphinkleton.png")!=-1) {
+              audio1.stop();
               audio1.play();
               Image.src = "sadington.png";
             }
             else {
+              audio2.stop();
               audio2.play();
               Image.src = "sphinkleton.png";
             }
@@ -27,6 +29,8 @@
         if (clicks < 100) {
           clicks++;
           if (clicks >= 100) {
+            audio1.stop();
+            audio2.stop();
             audio3.play();
             Image.src = "explode.gif";
           }
