--- a/index.html
+++ b/index.html
@@ -16,12 +16,14 @@
       Image.addEventListener("click", () => { 
         if (clicks < 99) {
             if (Image.src.indexOf("sphinkleton.png")!=-1) {
-              audio1.stop();
+              audio1.pause();
+              audio1.currentTime = 0;
               audio1.play();
               Image.src = "sadington.png";
             }
             else {
-              audio2.stop();
+              audio2.pause();
+              audio2.currentTime = 0;
               audio2.play();
               Image.src = "sphinkleton.png";
             }
@@ -29,8 +31,10 @@
         if (clicks < 100) {
           clicks++;
           if (clicks >= 100) {
-            audio1.stop();
-            audio2.stop();
+            audio1.pause();
+            audio1.currentTime = 0;
+            audio2.pause();
+            audio2.currentTime = 0;
             audio3.play();
             Image.src = "explode.gif";
           }
