--- a/index.html
+++ b/index.html
@@ -1,45 +1,18 @@
-<html style="background-color: #000000; overflow: hidden;">
+<html>
+  <head>
     <title>Sphinkleton</title>
-    <img id="image" loop=none src="sphinkleton.png" style="
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 80%;"
-    >
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
-    <script>
-      const Image = document.getElementById("image"); 
-      var clicks = 0
-      const audio1 = new Audio('boowomp.mp3');
-      const audio2 = new Audio('mweheh.mp3');
-      const audio3 = new Audio('bigexp.wav');
-      Image.addEventListener("click", () => { 
-        if (clicks < 99) {
-            if (Image.src.indexOf("sphinkleton.png")!=-1) {
-              audio1.pause();
-              audio1.currentTime = 0;
-              audio1.play();
-              Image.src = "sadington.png";
-            }
-            else {
-              audio2.pause();
-              audio2.currentTime = 0;
-              audio2.play();
-              Image.src = "sphinkleton.png";
-            }
-        }
-        if (clicks < 100) {
-          clicks++;
-          if (clicks >= 100) {
-            audio1.pause();
-            audio1.currentTime = 0;
-            audio2.pause();
-            audio2.currentTime = 0;
-            audio3.play();
-            Image.src = "explode.gif";
-          }
-        }
-      });
-   </script>
-   <link rel="icon" type="image/x-icon" href="sphinkleton.ico">
+  </head>
+  <body>
+    <img id="image" loop=none src="sphinkleton.png">
+  </body>
+  <footer>
+    <div id="buttons">
+      <a id="disc" onclick="disc()">Discord</a><p1 id="bum">bruhlololo</p1>
+      <a id="flash" onclick="flash()">Flashbang</a><p1 id="bum">bruhlololo</p1>
+      <a id="leav" onclick="leav()">Leave</a>
+    </div>
+  </footer>
+  <link rel="stylesheet" href="index.css">
+  <script type="text/javascript" src="index.js"></script>
+  <link rel="icon" type="image/png" href="favicon.ico">
 </html>
