--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   </body>
   <footer>
     <div id="buttons">
-      <a id="disc" onclick="disc()">Discord</a><p1 id="bum">bruhlololo</p1>
-      <a id="flash" onclick="flash()">Flashbang</a><p1 id="bum">bruhlololo</p1>
+      <a id="disc" onclick="disc()">Discord</a><p1 id="nig">bruhlololo</p1>
+      <a id="flash" onclick="flash()">Flashbang</a><p1 id="nig">bruhlololo</p1>
       <a id="leav" onclick="leav()">Leave</a>
     </div>
   </footer>
